[package]
name = "telegram_clicker_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.6", features = ["full"] }
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1", features = ["derive"] }
tokio-util = { version = "0.6", features = ["codec"] }
log = "0.4"
pretty_env_logger = "0.4"
reqwest = "0.12.7"
dotenv = "0.15.0"
